Fix overflow-x-axis on mobile layout

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -45,6 +45,7 @@
 html,
 body {
   @apply font-body antialiased;
+  overflow-x: hidden;
 }
 
 .font-headings {
